# pyCSRML

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  _check_patterns.py  _check_smarts.py  _debug_alkene.py  _diag2.py  _diag3.py  _diagnose_bits.py  _diagnose_patterns.py  _ester_comparison.py  _explore_pfasgroups.py  _test_smarts.py  _verify_fix.py  analyze_xml_output.txt  conftest.py  dump_xml.py  pyproject.toml  test_module.py  test_results.txt
.github/workflows/: ci.yml
docs/: benchmarks.rst  changelog.rst  conf.py  csrml_format.rst  index.rst  installation.rst  json_yaml_format.rst  quickstart.rst  requirements.txt  supplementary_performance.md
docs/api/: csrml.rst  embedding.rst  fingerprinter.rst
pyCSRML/: __init__.py  _csrml.py  convert_xml_to_json.py  embedding.py  fingerprinter.py
pyCSRML/data/: TxP_PFAS_v1.0.4.json  TxP_PFAS_v1.0.4.xml  _pytest_warn.txt  _rdkit_warn.txt  toxprint_V2.0_r711.json
scripts/: _check_pkgs.py  _test_imports.py  benchmark_pycsrml_timing.py  benchmark_toxprint_toxcast.py  create_size_benchmarks.py  report_fingerprint_distances.py  report_ml_comparison.py
scripts/data/: clinventory_toxprint_per_compound_tanimoto.csv  clinventory_txppfas_per_compound_tanimoto.csv  fidelity_log.txt  fingerprint_fidelity_report.md  ml_comparison_log.txt  ml_comparison_report.md  toxcast_per_bit_accuracy.csv  toxcast_per_compound_tanimoto.csv  toxprint_toxcast_fast_results.csv  toxprint_toxcast_fast_summary.csv  toxprint_toxcast_results.csv  toxprint_toxcast_summary.csv
tests/: _check_tsv_alignment.py  clinventory_bit_accuracy_baseline.json  concordance_report.md  test_benchmark_regression.py  test_chemotyper_concordance.py  test_smoke.py
tests/test_data/: Richard2023_SI_TableS2.csv  Richard2023_SI_TableS5.csv  TxP_PFAS_v1.tsv  toxcast_smiles.smi
tests/test_data/size_benchmarks/: bench_large.smiles  bench_medium.smiles  bench_metadata.csv  bench_small.smiles  bench_tiny.smiles  bench_xlarge.smiles  chemotyper_timing_template.csv  pycsrml_timing_baseline.json
